# buzzer

./: .env  .gitignore  Cargo.toml  Chef.dockerfile  Dockerfile  docker-compose.yml  init-letsencrypt.sh  package-lock.json
common/: Cargo.toml
common/src/: lib.rs  message.rs
frontend/: Cargo.toml  Dioxus.toml  Dockerfile  index.html  nginx.conf
frontend/assets/: main.css  main_fixed.css
frontend/src/: file_viewer.rs  host.rs  host_orig.rs  main.rs  player.rs  timer.rs
nginx/: nginx.conf
server/: Cargo.toml  Dockerfile
server/configuration/: local.yaml  production.yaml
server/src/: configuration.rs  main.rs
