[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common"}
dioxus = { version = "0.5", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
# getrandom = { version = "0.2", features = ["js"] }
log = "0.4.17"
wasm-bindgen-futures = "0.4"
futures-util = { version = "0.3", features = ["sink"] }
im-rc = "15"

# Required for WebSockets in WASM
gloo-net = { version = "0.5", features = ["websocket"] }
wasm-logger = "0.2.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
