[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
dioxus = { version = "0.6.1", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
log = "0.4.17"
wasm-bindgen-futures = "0.4"
futures-util = { version = "0.3", features = ["sink"] }
im-rc = "15"
tokio = { version = "1.46.1", features = ["sync", "macros", "io-util", "rt", "time"] }
web-sys = { version = "0.3", features = ["Clipboard", "Navigator", "HtmlAudioElement", "FileList", "File", "FileReader", "ProgressEvent", "Blob", "BlobPropertyBag"] }
gloo-net = { version = "0.5", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]

[profile]
[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"
