[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
common = { path = "../common"}
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures-util = "0.3"
tokio-stream = "0.1"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"

# DashMap is great for concurrent, mutable state, perfect for our games map.
dashmap = "6.1"
